# AI-chef-for-private-dining

./: .env.example  .gitignore  README.md  helloworld.ipynb  pyproject.toml  restart_server.bat
app/api/v1/: chat.py  oss.py
app/static/: index.html
frontend/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.vue  style.css
frontend/src/api/: chat.ts
frontend/src/components/: ChatInput.vue  ChatMessage.vue  Header.vue
frontend/src/composables/: useChat.ts  useImageUpload.ts
frontend/src/types/: chat.ts
notebooks/2 langchain入门/: 2.1.ipynb  2.2.ipynb  2.3Message.ipynb  2.4Prompt.ipynb  2.5Tools.ipynb
