[project]
name = "pythonproject"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "dashscope>=1.25.17",
    "langchain-community>=0.4.1",
    "langchain-deepseek>=1.0.1",
    "langchain-tavily>=0.2.18",
    "notebook>=7.5.5",
    "openai>=2.32.0",
    "python-dotenv>=1.2.2",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
